--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon ./src/index.ts",
     "build": "tsc",
     "lint": "eslint 'src/**/*.ts'",
-    "lint:fix": "eslint 'src/**/*.ts' --fix"
+    "lint:fix": "eslint 'src/**/*.ts' --fix",
+    "vercel-build":"echo hello"
   },
   "keywords": [],
   "author": "",
