--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,16 @@
-{ 
-    "version": 2, 
+{
+    "version": 2,
     "builds": [
-        { 
-            "src": "dist/index.js", 
-            "use": "@vercel/node" 
-        }
+      {
+        "src": "dist/index.js",
+        "use": "@vercel/node"
+      }
     ],
-    "routes":[
-        {
-            "src":"/routes/index.js",
-            "dest":"dist/index.js"
-        }
-    ] 
-}
-
-
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "dist/index.js"
+      }
+    ]
+  }
+  
